--- a/MVP01/2. SETUP/2.0 GUI/Flask app/templates/configurations.html
+++ b/MVP01/2. SETUP/2.0 GUI/Flask app/templates/configurations.html
@@ -35,7 +35,7 @@
                             <td>{{ Config_Layer['squarepages'] }}</td>
                             <td>{{ Config_Layer['notepages'] }}</td>
                             <td><a href="{{ url_for('delete_configuration', realisation_number=realisation['id'], layer_id=Config_Layer['layer_id'])}}"><button>Delete</button></a></td>
-                        </tr>
+                            <td><a href="{{ url_for('pages', realisation_number=realisation['id'], layer_id=Config_Layer['layer_id']) }}"><button>Pages</button></a></td>
                         {% endfor %}
                     </tbody>
                 </table>
