pages page setup with table in block content 2

--- a/MVP01/2. SETUP/2.0 GUI/Flask app/templates/pages.html
+++ b/MVP01/2. SETUP/2.0 GUI/Flask app/templates/pages.html
@@ -27,7 +27,134 @@
 {% endblock %}
 
 {% block content2 %}
+<table class="pages_table">
+    <tr>
+        <td class="centered_column"><strong>1</strong></td>
+        <td class="centered_column"><strong>2</strong></td>
+        <td class="centered_column"><strong>3</strong></td>
+        <td class="centered_column"><strong>4</strong></td>
+        <td class="centered_column"><strong>5</strong></td>
+        <td class="centered_column"><strong>6</strong></td>
+        <td class="centered_column"><strong>7</strong></td>
+    </tr>
+    <tr>
+        <td>
+            Symbolpage {{ configuration.squarepages[0] }}
+        </td>
+        <td>
+            Symbolpage {{ configuration.squarepages[1] }}
+        </td>
+        <td>
+            Symbolpage {{ configuration.squarepages[2] }}
+        </td>
+        <td>
+            Symbolpage {{ configuration.squarepages[3] }}
+        </td>
+        <td>
+            Symbolpage {{ configuration.squarepages[4] }}
+        </td>
+        <td>
+            Symbolpage {{ configuration.squarepages[5] }}
+        </td>
+        <td>
+            Symbolpage {{ configuration.squarepages[6] }}
+        </td>
+    </tr>
+    <tr>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameter
+        </td>
+        <td>
+            parameters
+        </td>
+    </tr>
 
+    <tr>
+        <td>
+            Notepage {{ configuration.notepages[0] }}
+        </td>
+        <td>
+            Notepage {{ configuration.notepages[1] }}
+        </td>
+        <td>
+            Notepage {{ configuration.notepages[2] }}
+        </td>
+        <td>
+            Notepage {{ configuration.notepages[3] }}
+        </td>
+        <td>
+            Notepage {{ configuration.notepages[4] }}
+        </td>
+        <td>
+            Notepage {{ configuration.notepages[5] }}
+        </td>
+        <td>
+            Notepage {{ configuration.notepages[6] }}
+        </td>
+    </tr>
+    <tr>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameters
+        </td>
+        <td>
+            parameter
+        </td>
+        <td>
+            parameters
+        </td>
+    </tr>
+    <tr>
+        <td>
+            buttons
+        </td>
+        <td>
+            buttons
+        </td>
+        <td>
+            buttons
+        </td>
+        <td>
+            buttons
+        </td>
+        <td>
+            buttons
+        </td>
+        <td>
+            buttons
+        </td>
+        <td>
+            buttons
+        </td>
+    </tr>
+
+</table>
 {% endblock %}
 
 {% block side1 %}
