--- a/MVP01/2. SETUP/2.0 GUI/Flask app/static/basic_style.css
+++ b/MVP01/2. SETUP/2.0 GUI/Flask app/static/basic_style.css
@@ -16,7 +16,7 @@ body {
     max-width: 1200px; /* Set a maximum width */
     display: flex;
     flex-direction: column;
-    height: 95vh;
+    height: auto;
     box-sizing: border-box; /* Include padding and border in element's total width and height */
     border: 1px solid #ccc;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
@@ -98,6 +98,16 @@ footer {
   color: white;
   padding: 5px 10px;
 }
+
+.pages_table td:hover {
+    background-color: coral;
+}
+.pages_table th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+.centered_column {text-align: center;}
 
 /* Remove border on last row of boxes */
 main > div:last-child, footer > div:last-child {
